--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,25 @@ site_name: Fundamentals
 theme:
   name: material
   palette:
-    primary: deep purple
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default 
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 
 plugins:
   - search
@@ -20,6 +38,10 @@ markdown_extensions:
 
   - pymdownx.arithmatex:
       generic: true
+
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
 
 # extra_javascript:
 #   - javascripts/mathjax.js
